--- a/index.html
+++ b/index.html
@@ -31,5 +31,61 @@
             <a href="#">Contact Me</a>
         </div>
     </section>
+    <section class="recipies">
+        <div class="heading-rec">
+            <h1>My Recipies</h1>
+            <p>Here are some of my recommended recipies for you. I love to try new recipies and with all my experiences i suggest you to try one</p>
+        </div>
+        <div class="flex">
+            <div class="card">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h2>Jimmy Dean</h2>
+                <p>Jimmy Dean is one of my favouritre dishes. It is made of chicken, mayonise,sause, cheese etc..</p>
+            </div>
+            <div class="card">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h2>Ramen</h2>
+                <p>Ramen is one of my favouritre dishes. It is made of noodles, steak,sause, cheese etc..</p>
+            </div>
+            <div class="card">
+                <img src="images/food/Project Cover8.png" alt="">
+                <h2>Chola Bhut</h2>
+                <p>Chola Bhut is one of my favouritre dishes. It is made of chola, paratha,sause, salad etc..</p>
+            </div>
+        </div>
+    </section>
+    <section id="team-sec">
+        <h1>TEAM</h1>
+        <div class="team">
+        <div class="team-mem">
+            <img src="images/male/1.jpg" alt="">
+            <h2>Aden Biden</h2>
+            <h3>Manager</h3>
+        </div>
+        <div class="team-mem">
+            <img src="images/male/2.jpg" alt="">
+            <h2>Bill Gates</h2>
+            <h3>Head Chef</h3>
+        </div>
+        <div class="team-mem">
+            <img src="images/male/3.jpg" alt="">
+            <h2>Akkkas Ali</h2>
+            <h3>Junior Chef</h3>
+        </div>
+        </div>
+    </section>
+    <section class="contact">
+        <h1>Contact US</h1>
+        <form action="">
+            <input type="text" placeholder="Enter Your Name"><br>
+            <input type="email" placeholder="Enter Your Email"><br>
+            <textarea placeholder="Enter Message"></textarea><br>
+            <input type="submit" value="Send Message"><br>
+        </form>
+    </section>
+    <footer>
+        <h2><span class="orange">FOOD</span> NETWORK</h2>
+        <p>Eat healthy to live healthy. Live healthy to live happy</p>
+    </footer>
 </body>
 </html>
