--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
     </section>
     <section class="contact">
         <h1>Contact US</h1>
-        <form action="">
+        <form action="" class="form">
             <input type="text" placeholder="Enter Your Name"><br>
             <input type="email" placeholder="Enter Your Email"><br>
-            <textarea placeholder="Enter Message"></textarea><br>
-            <input type="submit" value="Send Message"><br>
+            <textarea placeholder="Enter Your Message"></textarea><br>
+            <button>Submit</button>
         </form>
     </section>
     <footer>
